<resources>
    <string name="appname">"Museum App"</string>
    <string name="welcome">Üdvözöllek a Jegyvásárló Alkalmazásban!</string>
    <string name="museum_logo">Museum Logo</string>
    <string name="next">Tovább</string>
    <string name="person_icon">Felhasználó ikon</string>
    <string name="username">Felhasználónév</string>
    <string name="password_icon">Lakat ikon</string>
    <string name="password">Jelszó</string>
    <string name="Login">Bejelentkezés</string>
    <string name="Registration">Regisztráció</string>
    <string name="UsernameOrEmail">Email vagy felhasználónév</string>
    <string name="new_registration_text">Ha még nincsen profilod, itt regisztrálhatsz:</string>
    <string name="email">Email-cím</string>
    <string name="login_question">Mivel szeretnél bejelentkezni?</string>
    <string name="data_text">Kérlek add meg az adataidat:</string>
    <string name="quest_login">Vendégként folytatom</string>
    <string name="google_login">Bejelentkezés Google-fiókkal</string>
    <string name="quest_text">Vagy vendégként folytathatod:</string>
    <string name="registration_name">Név</string>
    <string name="last_name">Keresztnév</string>
    <string name="first_name">Vezetéknév</string>
    <string name="phone_number">Telefonszám</string>
    <string name="birthdate">Születési dátum</string>
    <string name="address">Cím</string>
    <string name="google_maps_key">AIzaSyA87_CY26W_0aPtJaiwhhNcnvoa8A6IjaY</string>
    <string name="adress_search">Cím keresése</string>
    <string name="cart">Kosár</string>
    <string name="profile">Profil</string>
    <string name="search">Keresés</string>
    <string name="view_change">Változtatható nézőpont</string>
    <string name="map">Térkép</string>
    <string name="ticket_type">Jegytípus</string>
    <string name="ticket_price">Ár: 0 Ft</string>
    <string name="ticket_about">Leírás</string>
    <string name="cart_description">Kosár tartalma...</string>
    <string name="profile_name">Felhasználó Neve</string>
    <string name="profile_email">email@example.com</string>
    <string name="ticket_buy">Kosárba</string>
    <string name="save">Mentés</string>
    <string name="change_name">Add meg a neved</string>
    <string name="change_email">Add meg az emailed:/</string>
    <string name="login_here">Already Registered ? Login Here</string>
    <string name="name">Név:</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_here_create_account">Nincs még fiókod ? Hozz létre egyet</string>
    <string name="already_registered_login_here">Már regisztráltál ? Jelentkezz be itt</string>
    <string name="logout">Kijelentkezés</string>
    <string name="email_text">Email:</string>
    <string name="web_client_id">990697271233-9eqnpe17q58fg6rmsprp9pkc1ahdcr0k.apps.googleusercontent.com</string>
    <string name="ticket_search">Keresés</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="to_cart">Kosárba</string>
    <string name="Ticket_type">Jegytípus</string>
    <string name="Ár">Ár: 2500 Ft</string>
    <string name="le_r_s_bel_p_s_a_m_zeumba">Leírás: belépés a múzeumba</string>
    <string name="no_tickets">Nincsen megvásárolt jegyed.</string>
    <string name="pay">Fizetés</string>
    <string name="all_price">Összesen: 0 Ft</string>
    <string name="mapicon">Térkép ikon</string>
    <string name="Welcome">Köszöntelek a Louvre Múzeum jegyvásárló felületén!</string>
</resources>